feat: implementar bootstrap automático com template seed (Opção A)
- Adiciona função _bootstrap_seed_template_if_needed em main.py
- Copia automaticamente backend/seed_template/gestao_obras_seed.db se DB não existir
- Controlado por variável BOOTSTRAP_SEED_TEMPLATE (padrão: 1)
- Script prepare_seed_template.py para gerar template do DB atual
- Script test_bootstrap_seed.py para validar bootstrap
- Task VS Code 'Preparar seed template'
- Documentação completa em README.md e backend/seed_template/README.md
- Template seed incluído (0.61 MB) com 16 clientes, 19 usuários, 1 contrato
- Garante que produção no Render nunca inicie vazia com Disk configurado

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -173,6 +173,12 @@
 			"type": "shell",
 			"command": ".venv\\Scripts\\Activate.ps1; python backend/scripts/backup_sqlite.py --zip",
 			"group": "build"
+		},
+		{
+			"label": "Preparar seed template",
+			"type": "shell",
+			"command": ".venv\\Scripts\\Activate.ps1; python backend/scripts/prepare_seed_template.py",
+			"group": "build"
 		}
 	],
 	"inputs": [
