feat: adicionar script de teste de bootstrap para Render
- Script test_bootstrap_render.ps1 valida:
  - Health check
  - Login funcional
  - DB path e existência
  - Persistência (detecta se está em /tmp ephemeral)
  - Contagens de usuários/clientes/contratos
  - Alerta se dados esperados não estão presentes
- Task VS Code 'Teste: bootstrap Render (validar DB)'
- Testado em produção: DB existe mas sem template aplicado ainda

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -179,6 +179,13 @@
 			"type": "shell",
 			"command": ".venv\\Scripts\\Activate.ps1; python backend/scripts/prepare_seed_template.py",
 			"group": "build"
+		},
+		{
+			"label": "Teste: bootstrap Render (validar DB)",
+			"type": "shell",
+			"command": "pwsh -NoLogo -NoProfile -ExecutionPolicy Bypass -File scripts/test_bootstrap_render.ps1 -BaseUrl https://gestao-backend-lbab.onrender.com",
+			"isBackground": false,
+			"group": "build"
 		}
 	],
 	"inputs": [
