feat: adicionar script de upload de template para Render
- Script upload_template_to_render.ps1 automatiza aplicação do template
- Faz login, upload, valida resultado
- Mostra contagens antes/depois
- Task VS Code 'Upload: template seed → Render'
- Pronto para uso após deploy do endpoint de restore

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -186,6 +186,13 @@
 			"command": "pwsh -NoLogo -NoProfile -ExecutionPolicy Bypass -File scripts/test_bootstrap_render.ps1 -BaseUrl https://gestao-backend-lbab.onrender.com",
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "Upload: template seed → Render",
+			"type": "shell",
+			"command": "pwsh -NoLogo -NoProfile -ExecutionPolicy Bypass -File scripts/upload_template_to_render.ps1 -BaseUrl https://gestao-backend-lbab.onrender.com",
+			"isBackground": false,
+			"group": "build"
 		}
 	],
 	"inputs": [
